# dlops_champions

./: main.py  pyproject.toml  templates.py
research/: data_ingestion.ipynb  prepare_base_model.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier/config/: config.yaml  configuration.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py
